<resources>
    <string name="app_name">mAccess</string>
    <string name="employee_login">Employee Login</string>
    <string name="employee_login_description">Simply enter your existing username and the corresponding password.</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="services">Services</string>
    <string name="banking">Banking</string>
    <string name="insurance">Insurance</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="under_construction">This page is under construction</string>
    <string name="notifications">Notifications</string>
    <string name="requests">Requests</string>
    <string name="personal_info">Personal Information</string>
    <string name="profile">Profile</string>
    <string name="new_request">New Request</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leave_requested">Leave Requested</string>
    <string name="change_password">Change Password</string>
    <string name="attendance_log">Attendance Log</string>
    <string name="settings">Settings</string>
    <string name="un_sync_log">Un Sync Log</string>
    <string name="personal_information">Personal Information</string>

    <string name="leave">Leave</string>
    <string name="document">Document</string>
    <!-- for permission alert-->
    <string name="settings_permission">Settings</string>
    <string name="camera_video_permission">To capture photos and videos, allow FilePicker access to your camera.\nTap Settings > Permissions, and turn Camera on.</string>
    <string name="storage_permission">To send media, allow FilePicker access to your device photos, media, and files.\nTap Settings > Permissions, and "Files and media" on.</string>
    <string name="call_permission">To call, allow FilePicker access to your microphone.\nTap Settings > Permissions, and turn Microphone on.</string>
    <string name="not_now">Not Now</string>

    <string name="default_notification_channel_id">101</string>
    <string name="apiEngineDown">API Engine Down</string>
    <string name="tokenExpiredDesc">Your token has been expired. Please login again to continue</string>
    <string name="by_using_our_mobile_app_you_agree_to_our_terms_of_use_and_privacy_policy">By using our mobile app, you agree to our Terms of Use and Privacy Policy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="apply">Apply</string>
    <string name="simply_enter_the_existing_username_and_the_corresponding_password">Simply enter the existing username and the corresponding password.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="pressOnceAgainToExit">Press once again to exit</string>
    <string name="notAvailable">Not Available</string>
    <string name="resendOtp"><u>Resend OTP</u></string>
    <string name="select">Select</string>
    <string name="needPermissions">Need permission(s)</string>
    <string name="somePermissionsAreRequiredToDoTheTask">Some permissions are required to do the task.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    ////
    <string name="job_list">Job Post List</string>
    <string name="job_post_request">Job Post Request</string>
    <string name="pay_slip">Pay Slip</string>
    <string name="creditrequest">Credit Request</string>
</resources>