<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.services.ServicesFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/home_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/white"
        app:title="@string/notifications"
        app:titleCentered="true"
        app:titleTextAppearance="@style/tittle"
        app:titleTextColor="@color/white" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banking" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insurance" />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/typeLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/banking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/normal400"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:text="@string/banking"
                android:textColor="@color/text_color_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/insurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/normal400"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="3dp"
                android:paddingRight="16dp"
                android:paddingBottom="3dp"
                android:text="@string/insurance"
                android:textColor="@color/text_color_light"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/container_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeLay">

        <LinearLayout
            android:id="@+id/bank_coming_soon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/ic_banking" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/medium500"
                android:gravity="center"
                android:text="@string/coming_soon"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/medium500"
                android:gravity="center"
                android:text="@string/under_construction"
                android:textColor="@color/text_light_shade"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/insurance_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_insurance_1" />

                <LinearLayout
                    android:id="@+id/textLay1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_toEndOf="@+id/image1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/medium500"
                        android:text="Policybazaar Car Insurance"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/medium500"
                        android:text="Save up to 85% with EMI"
                        android:textColor="@color/text_light_shade"
                        android:textSize="14sp" />


                </LinearLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_right_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/textLay1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/image1"
                    android:background="@color/line_black" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_insurance_2" />

                <LinearLayout
                    android:id="@+id/textLay2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_toEndOf="@+id/image2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/medium500"
                        android:text="Saul Secure Insurance"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/medium500"
                        android:text="Health Insurance from Saul"
                        android:textColor="@color/text_light_shade"
                        android:textSize="14sp" />


                </LinearLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_right_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/textLay2"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/image2"
                    android:background="@color/line_black" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_insurance_3" />

                <LinearLayout
                    android:id="@+id/textLay3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_toEndOf="@+id/image3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/medium500"
                        android:text="Saul Goodman Insurance"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/medium500"
                        android:text="It’s all Good Man Insurance"
                        android:textColor="@color/text_light_shade"
                        android:textSize="14sp" />


                </LinearLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_right_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/textLay3"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/image3"
                    android:background="@color/line_black" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp">

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_insurance_4" />

                <LinearLayout
                    android:id="@+id/textLay4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_toEndOf="@+id/image4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/medium500"
                        android:text="Slippin Jimmy Insurance"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/medium500"
                        android:text="Jimmy McGill Insurance Offer"
                        android:textColor="@color/text_light_shade"
                        android:textSize="14sp" />


                </LinearLayout>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_right_arrow" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
